# tradekit

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: indicators.yaml  screener.yaml  watchlists.yaml.example
src/tradekit/: __init__.py  cli.py  config.py
src/tradekit/analysis/: __init__.py  indicators.py  levels.py  patterns.py  scoring.py  volume.py
src/tradekit/data/: __init__.py  backtest.py  base.py  cache.py  finviz.py  massive.py  yahoo.py
src/tradekit/reports/: __init__.py  alerts.py  html.py  markdown.py  terminal.py
src/tradekit/screener/: __init__.py  filters.py  premarket.py  ranking.py
tests/: test_analysis.py  test_config.py  test_filters.py
